--- a/02-Sprite/02-Sprite.vcxproj.filters
+++ b/02-Sprite/02-Sprite.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug.h">
